Fix anchor color in dark mode
Fixes #6

--- a/src/app.css
+++ b/src/app.css
@@ -36,7 +36,8 @@
     @apply text-gray-100 border-gray-700 bg-gray-900 !important;
   }
 
-  .ce-block__content a.anchor {
+  .ce-block__content a.anchor,
+  .ce-block__content a {
     @apply text-white;
   }
 
